コマンドライン引数解析クラス更新

--- a/コマンドライン引数解析クラス.md
+++ b/コマンドライン引数解析クラス.md
@@ -7,6 +7,7 @@
 
 コマンドライン引数からオプションとそれ以外の引数を識別し、引数が不足している場合はAllExceptionから例外処理の送出をする。
 オプションとは、-（ハイフン）がついている引数のことをいう。
+オプションは、必ず1つだけ指定される。
 
 ## 処理フロー
 - コマンドライン引数を取得する
@@ -20,16 +21,19 @@
 ### フィールドの宣言
 |型|変数名|初期値|内容|
 |:--|:--|:--|:--|
+|CommandOption|option|null|該当するオプションの処理を格納|
 |List&lt;Object&gt;|argsList|ArrayList<>()|オプション以外の引数を格納|
 
 ### コンストラクタ
 取得した引数でオプションとそれ以外の引数を判定し、宣言したフィールドに格納する。
+取得したオプションに該当する処理をCommanedOptionから取得し、宣言したフィールドに格納する。
 必要な引数の数の表を参考にし、引数が不足していればAllExceptionからパラメータ不足の例外処理を送出する。
 
 |項目|内容|特記事項|
 |:--|:--|:--|
 |コンストラクタ名|CommandParse||
 |引数|String[] args|コマンドライン引数取得|
+|引数|Map<String, CommandOption> optionMap|オプションの処理|
 |例外|AllException|Mainへ送出|
 
 |項目|必要な引数の数|
@@ -42,8 +46,17 @@
 ##### 処理フロー
 - コマンドライン引数を先頭から順に取得する
 - オプションかどうかを判定する
+- オプションに該当する処理をCommandOptionから取得する
+- 取得した処理をoptionに格納する
 - オプション以外の引数はargsListに格納する
 - 引数が足りなければAllExceptionから例外処理を送出する
+
+### オプション処理返却メソッド
+|項目|内容|
+|:--|:--|
+|メソッド名|getOption|
+|型|CommandOption|
+|概要|オプションに該当する処理を返却する|
 
 ### 引数返却メソッド
 |項目|内容|
@@ -56,3 +69,16 @@
 |エラーコード|エラーメッセージ|条件|
 |:--|:--|:--|
 |PARAMETER_ERROR|パラメータが不足しています。|引数が不足している場合|
+
+# オプション用インターフェース
+|項目|内容|
+|:--|:--|
+|クラス名|CommandOption|
+|概要|指定されたオプションごとの処理を表す|
+
+### メソッド定義
+|戻り値|メソッド名|内容|
+|:--|:--|:--|
+|String|・・・|なんらかの処理|
+|int|・・・|なんらかの処理|
+|void|・・・|なんらかの処理|
